--- a/plugin.xml
+++ b/plugin.xml
@@ -31,6 +31,7 @@
         
         <header-file src="src/ios/App47PGPlugin.h" />
         <source-file src="src/ios/App47PGPlugin.m" />
+        <resource-file src="src/ios/EmbeddedAgentSettings.plist" />
         
         <framework src="src/ios/EmbeddedAgent.framework" custom="true" embed="true" />
         
